<resources>
    <string name="app_name">Freeze</string>
    <string name="click_me">Click Me</string>
    <string name="smart_light">Smart Light</string>
    <string name="smart_fan">Smart Fan</string>
    <string name="smart_ac">Smart AC</string>
    <string name="smart_tv">Smart TV</string>
    <string name="smart_devices">Smart Devices</string>
    <string name="christophy">Christophy</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="smith">Smith</string>
</resources>